完成车辆管理模块开发

--- a/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBSummaryList.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForBunkerBSummaryList.cshtml
@@ -48,7 +48,7 @@
                                         油料号
                                     </th>
                                     <th style="width: 100px;">
-                                        原有数量
+                                        月初单位油料保有量
                                     </th>
                                     <th style="width: 100px;">
                                         加油小计
@@ -67,7 +67,7 @@
                                         加油时间
                                     </th>
                                     <th style="width: 100px;">
-                                        剩余油料
+                                        月末单位油料保有量
                                     </th>
                                 </tr>
                                 </thead>
