--- a/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForAuditBList.cshtml
+++ b/TAF.Web/Views/ApplicationForBunkerB/_ApplicationForAuditBList.cshtml
@@ -183,7 +183,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">申请金额</label>
+                            <label class="col-sm-2 control-label no-padding-right">申请油量</label>
                             <div class="col-sm-10">
                                 <label class=" control-label no-padding-left">{{item.amount}}</label>
                             </div>
@@ -193,7 +193,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group" >
-                            <label class="col-sm-2 control-label no-padding-right">卡内余额</label>
+                            <label class="col-sm-2 control-label no-padding-right">剩余油量</label>
                             <div class="col-sm-10">
                                 <label class=" control-label no-padding-left">{{item.totalAmount}}</label>
                             </div>
@@ -204,7 +204,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right">审核金额</label>
+                            <label class="col-sm-2 control-label no-padding-right">审核油量</label>
                             <div class="col-sm-10">
                                 <input type="number" class="form-control" placeholder="必填" id="auditingAmount" name="auditingAmount" v-model="item.auditingAmount" v-validate:auditingAmount="{required:true}" />
                             </div>
