--- a/TAF.Web/Views/OilRechargeRecord/_OilRechargeRecordIndex.cshtml
+++ b/TAF.Web/Views/OilRechargeRecord/_OilRechargeRecordIndex.cshtml
@@ -9,7 +9,7 @@
                     <add-button title="新增"></add-button>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-10 col-sm-12">
                         <table class="table table-striped table-hover table-bordered ">
                             <thead>
                                 <tr role="row">
