--- a/TAF.Web/Views/ApplyForVehicleMaintenance/_AudingForVehicleMaintenance2Index.cshtml
+++ b/TAF.Web/Views/ApplyForVehicleMaintenance/_AudingForVehicleMaintenance2Index.cshtml
@@ -509,7 +509,7 @@
                     </tr>
                     <tr role="row">
                         <th>
-                           <input type="text" class="form-control" placeholder="出库单号" v-model="queryEntity.code" id="code" /></div>
+                           <input type="text" class="form-control" placeholder="出库单号" v-model="queryEntity.code" id="code" />
             </th>
             <th>
                 <button type="button" class="btn edit" v-on:click="searchDelivery(0)"><i class="fa fa-search"></i> 搜索</button>
