--- a/TAF.Web/Views/Shared/_LayoutWithEmpty.cshtml
+++ b/TAF.Web/Views/Shared/_LayoutWithEmpty.cshtml
@@ -21,8 +21,8 @@
     <link href="~/assets/css/beyond.min.css" rel="stylesheet" />
 </head>
 <body>
-    <script src="~/assets/js/LAB.min.js"></script>
-    <script src="~/Scripts/Common/layoutBase.js"></script>
+    <script src="~/assets/js/LAB.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/Common/layoutBase.js" type="text/javascript"></script>
     @RenderBody()
 </body>
 
