--- a/TAF.Web/Views/HisStock/_QueryStockList.cshtml
+++ b/TAF.Web/Views/HisStock/_QueryStockList.cshtml
@@ -6,90 +6,101 @@
                 <span class="widget-caption">物资报表</span>
             </div>
             <div class="widget-body">
+                    <div class="table-toolbar">
+                                        <button type="submit" class="btn btn-primary" v-on:click="export()"><i class='fa    fa    fa-print'></i>导出出入库记录 </button>
+                                    </div>
                 <div class="row">
                     <div class="col-md-12">
                         <table class="table table-striped table-hover table-bordered ">
                             <thead>
-                                <tr role="row">
-                                    <th style="width: 400px;">
-                                        出入库时间
-                                    </th>
-                                    <th style="width: 200px;">
-                                        出入库单号
-                                    </th>
-                                    <th style="width: 200px;">
-                                        编码
-                                    </th>
-                                    <th style="width: 200px;">
-                                        品名
-                                    </th>
-                                    <th style="width: 200px;">
-                                        规格型号
-                                    </th>
-                                    <th style="width: 100px;">
-                                        单位
-                                    </th>
-                                    <th style="width: 100px;">
-                                        单价
-                                    </th>
-                                    <th style="width: 100px;">
-                                        数量
-                                    </th>
-                                    <th style="width: 100px;">
-                                        小计
-                                    </th>
-                                    <th style="width: 200px;">
-                                        操作
-                                    </th>
-                                </tr>
-                                <tr>
-                                    <th>
-                                        <div class="row">
-                                            <div class="col-sm-6">
-                                                <input type="text" class="form-control" placeholder="起" v-model="queryEntity.dateFrom" id="dateFrom" readonly="readonly" />
-                                            </div>
-                                            <div class="col-sm-6">
-                                                <input type="text" class="form-control" placeholder="止" v-model="queryEntity.dateTo" id="dateTo" readonly="readonly" />
-                                            </div>
+                            <tr role="row">
+                                <th style="width: 400px;">
+                                    出入库时间
+                                </th>
+                                <th style="width: 200px;">
+                                    出入库单号
+                                </th>
+                                <th style="width: 200px;">
+                                    编码
+                                </th>
+                                <th style="width: 200px;">
+                                    品名
+                                </th>
+                                <th style="width: 200px;">
+                                    规格型号
+                                </th>
+                                <th style="width: 100px;">
+                                    单位
+                                </th>
+                                <th style="width: 100px;">
+                                    单价
+                                </th>
+                                <th style="width: 100px;">
+                                    数量
+                                </th>
+                                <th style="width: 100px;">
+                                    小计
+                                </th>
+                                <th style="width: 100px;">
+                                    操作员
+                                </th>
+                                <th style="width: 200px;">
+                                    操作
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" placeholder="起" v-model="queryEntity.dateFrom" id="dateFrom" readonly="readonly"/>
                                         </div>
-                                    </th>
-                                    <th>
-                                        <input type="text" class="form-control" placeholder="出入库单号" v-model="queryEntity.code" />
-                                    </th>
-                                    <th>
-                                        <input type="text" class="form-control" placeholder="编码" v-model="queryEntity.productCode" />
-                                    </th>
-                                    <th>
-                                        <input type="text" class="form-control" placeholder="品名" v-model="queryEntity.name" />
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th>
-                                    </th>
-                                    <th><search-command></search-command></th>
-                                </tr>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" placeholder="止" v-model="queryEntity.dateTo" id="dateTo" readonly="readonly"/>
+                                        </div>
+                                    </div>
+                                </th>
+                                <th>
+                                    <input type="text" class="form-control" placeholder="出入库单号" v-model="queryEntity.code"/>
+                                </th>
+                                <th>
+                                    <input type="text" class="form-control" placeholder="编码" v-model="queryEntity.productCode"/>
+                                </th>
+                                <th>
+                                    <input type="text" class="form-control" placeholder="品名" v-model="queryEntity.name"/>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th>
+                                </th>
+                                <th><search-command></search-command></th>
+                            </tr>
                             </thead>
                             <tbody>
-                                <tr v-for="item in list">
-                                    <td>{{item.date}}</td>
-                                    <td>{{item.code}}</td>
-                                    <td>{{item.productCode}}</td>
-                                    <td>{{item.productName}}</td>
-                                    <td>{{item.specifications}}</td>
-                                    <td>{{item.unit}}</td>
-                                    <td>{{item.price}}</td>
-                                    <td>{{item.amount}}</td>
-                                    <td><div v-if="item.category==2"><span class="red">{{item.total}}</span></div><div v-else>{{item.total}}</div></td>
-                                    <td></td>
-                                </tr>
+                            <tr v-for="item in list">
+                                <td>{{item.date}}</td>
+                                <td>{{item.code}}</td>
+                                <td>{{item.productCode}}</td>
+                                <td>{{item.productName}}</td>
+                                <td>{{item.specifications}}</td>
+                                <td>{{item.unit}}</td>
+                                <td>{{item.price}}</td>
+                                <td>{{item.amount}}</td>
+                                <td>
+                                    <div v-if="item.category==2"><span class="red">{{item.total}}</span></div>
+                                    <div v-else>{{item.total}}</div></td>
+                                <td>{{item.creatorUserId}}</td>
+                                <td></td>
+                            </tr>
                             </tbody>
-                            <tfoot is="table-foot" colspan="10"></tfoot>
+                            <tfoot is="table-foot" colspan="11"></tfoot>
                         </table>
                     </div>
                 </div>
